--- a/test/test1.css
+++ b/test/test1.css
@@ -113,32 +113,28 @@ body {
 
 /* Estilos para dispositivos móviles */
 @media screen and (max-width: 600px) {
-
     .header {
-        position: relative; /* Cambia la posición a relativa para que no sea fijo en dispositivos móviles */
+        position: fixed; /* Mantener el encabezado fijo */
+        top: 0; /* Alinear el encabezado en la parte superior */
+        width: 100%; /* Asegurar que ocupe todo el ancho */
+    }
+
+    .institution-name {
+        font-size: 18px; /* Ajusta el tamaño del texto del nombre de la institución para dispositivos móviles */
     }
 
     .footer {
-        position: relative; /* Cambia la posición a relativa para que no sea fijo en dispositivos móviles */
-        margin-top: 20px; /* Añade un margen superior para separar el footer del contenido */
+        position: fixed; /* Mantener el pie de página fijo */
+        bottom: 0; /* Alinear el pie de página en la parte inferior */
+        width: 100%; /* Asegurar que ocupe todo el ancho */
     }
 
     .content {
-        padding-top: 120px; /* Ajusta el espacio para que el contenido comience debajo del header */
+        padding-top: 80px; /* Ajusta el espacio para que el contenido comience debajo del header */
         padding-bottom: 120px; /* Ajusta el espacio para que el contenido termine antes del footer */
     }
 
     .testimonial-container {
-        flex-direction: column; /* Cambia la dirección del contenedor a columna */
-        align-items: center; /* Centra el contenido verticalmente */
-    }
-
-    .testimonial-image {
-        margin-right: 0; /* Elimina el margen derecho para centrar la imagen */
-        margin-bottom: 20px; /* Añade un margen inferior para separar la imagen del contenido */
-    }
-
-    .testimonial-info {
-        text-align: center; /* Centra el texto */
+        margin-top: 80px; /* Añadir margen superior para evitar que el contenido se superponga con el encabezado */
     }
 }
