--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,6 +38,7 @@ body{
     height: 100%;
     background-image: linear-gradient(100deg,#0000008c 0%, #0000008c 100%), url(../images/fondo.jpg);
     background-size: cover;
+    background-position: center;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
     z-index: -1;
 }
@@ -252,13 +253,13 @@ body{
         display: block;
     }
 
-    .nav__link--menu{
+    .nav_link_menu{
         position: fixed;
-        background-color: #000;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
+        background-color: gray;
+        top: 5%; /* Ajusta este valor para darle margen superior */
+        left: 45%; /* Ajusta este valor para darle margen izquierdo */
+        height: 50%; /* Reduce el alto para que no ocupe toda la pantalla */
+        width: 50%; /* Reduce el ancho para que no ocupe toda la pantalla */
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -269,7 +270,7 @@ body{
         transition: .7s opacity;
     }
 
-    .nav__link--show{
+    .nav_link--show{
         --show: block;
         opacity:1 ;
         pointer-events: unset;
